Fixed Settings Layout Issue

--- a/static/read/read.scss
+++ b/static/read/read.scss
@@ -227,7 +227,10 @@ body {
         }
       }
     }
-    >h2 {
+    >h2:nth-child(2) {
+      margin-top: 0;
+    }
+    #openSettings {
       font-size: 20px;
       transition: color 0.35s ease;
       position: relative;
@@ -297,7 +300,8 @@ body {
     left:0;
     transform: translateX(100%);
     transition: transform 0.35s ease;
-    padding:1px;
+    padding: 0px 20px;
+    box-sizing: border-box;
     &.show {
       transform: translateX(0%);
     }
@@ -314,7 +318,7 @@ body {
         border-top: 10px solid transparent;
         border-bottom: 10px solid transparent;
 
-        border-left: 10px solid transparent;
+        border-left: 10px solid var(--content-unemphasized);
 
         transition: border-left-color 0.35s ease;
 
